--- a/styles/scss/components/_lists.scss
+++ b/styles/scss/components/_lists.scss
@@ -56,9 +56,10 @@ ul {
     counter-reset: li;
   
     &.km-list {
-      padding: 0 0 0 25px;
+      padding: 0 0 0 5px;
       margin: 0;
       list-style: none;
+      margin-bottom: 2rem;
   
       li {
         line-height: 2.5rem;
